--- a/catalog_apparel.html
+++ b/catalog_apparel.html
@@ -36,49 +36,49 @@
     <section class="products">
         <!-- Apparel Products -->
         <div class="product" data-id="1">
-            <img src="products/apparel/luffy-tee.jpg" alt="Luffy Tee">
+            <img src="./products/apparel/luffy-tee.jpg" alt="Luffy Tee">
             <h3>Luffy Tee</h3>
             <p>$35.00</p>
             <a href="product.html?id=1" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="2">
-            <img src="products/apparel/aot-tee.jpg" alt="AOT Tee">
+            <img src="./products/apparel/aot-tee.jpg" alt="AOT Tee">
             <h3>Attack on Titan Tee</h3>
             <p>$35.00</p>
             <a href="product.html?id=2" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="3">
-            <img src="products/apparel/goku-tee.jpg" alt="Goku Tee">
+            <img src="./products/apparel/goku-tee.jpg" alt="Goku Tee">
             <h3>Goku Tee</h3>
             <p>$35.00</p>
             <a href="product.html?id=3" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="4">
-            <img src="products/apparel/okarun-tee.jpg" alt="Okarun Tee">
+            <img src="./products/apparel/okarun-tee.jpg" alt="Okarun Tee">
             <h3>Okarun Tee</h3>
             <p>$35.00</p>
             <a href="product.html?id=4" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="5">
-            <img src="products/apparel/sakamoto-tee.jpg" alt="Sakamoto Tee">
+            <img src="./products/apparel/sakamoto-tee.jpg" alt="Sakamoto Tee">
             <h3>Sakamoto Tee</h3>
             <p>$35.00</p>
             <a href="product.html?id=5" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="6">
-            <img src="products/apparel/tg-tee.jpg" alt="Turbo Granny Tee">
+            <img src="./products/apparel/tg-tee.jpg" alt="Turbo Granny Tee">
             <h3>Turbo Granny Tee</h3>
             <p>$35.00</p>
             <a href="product.html?id=6" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="7">
-            <img src="products/apparel/saitama-tee.jpg" alt="Saitama Tee">
+            <img src="./products/apparel/saitama-tee.jpg" alt="Saitama Tee">
             <h3>Saitama Tee</h3>
             <p>$35.00</p>
             <a href="product.html?id=7" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="8">
-            <img src="products/apparel/neko-luffy-tee.jpg" alt="Neko Luffy Tee">
+            <img src="./products/apparel/neko-luffy-tee.jpg" alt="Neko Luffy Tee">
             <h3>Neko Luffy Tee</h3>
             <p>$35.00</p>
             <a href="product.html?id=8" class="view-details">View Details</a>
