Added new page, fixed bugs
Added about us page, added calendar to page, fixed padding showing content outside screen

--- a/catalog_accessories.html
+++ b/catalog_accessories.html
@@ -27,7 +27,7 @@
                 </div>
             </li>
             <li><a href="#live-stream">Live Stream</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
         </ul>
     </nav>
 
