--- a/catalog_figures.html
+++ b/catalog_figures.html
@@ -30,7 +30,7 @@
                 </div>
             </li>
             <li><a href="#live-stream">Live Stream</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
         </ul>
     </nav>
 
@@ -39,61 +39,61 @@
         <div class="product" data-id="9">
             <img src="products/Figures/luffy-funko.jpg" alt="Luffy Funko Pop">
             <h3>Luffy Funko Pop</h3>
-            <p>$45.00</p>
+            <p>$25.00</p>
             <a href="product.html?id=9" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="10">
             <img src="products/Figures/aipom-funko.jpg" alt="Aipom Funko Pop">
             <h3>Aipom Funko Pop</h3>
-            <p>$45.00</p>
+            <p>$25.00</p>
             <a href="product.html?id=10" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="11">
             <img src="products/Figures/gambit-funko.jpg" alt="Gambit Funko Pop">
             <h3>Gambit Funko Pop</h3>
-            <p>$45.00</p>
+            <p>$25.00</p>
             <a href="product.html?id=11" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="12">
             <img src="products/Figures/goku-funko.jpg" alt="Goku Funko Pop">
             <h3>Goku Funko Pop</h3>
-            <p>$45.00</p>
+            <p>$25.00</p>
             <a href="product.html?id=12" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="13">
             <img src="products/Figures/melodias-funko.jpg" alt="Meliodas Funko Pop">
             <h3>Meliodas Funko Pop</h3>
-            <p>$45.00</p>
+            <p>$25.00</p>
             <a href="product.html?id=13" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="14">
             <img src="products/Figures/mina-funko.jpg" alt="Mina Funko Pop">
             <h3>Mina Funko Pop</h3>
-            <p>$45.00</p>
+            <p>$25.00</p>
             <a href="product.html?id=14" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="15">
             <img src="products/Figures/tengen-funko.jpg" alt="Tengen Funko Pop">
             <h3>Tengen Uzui Funko Pop</h3>
-            <p>$45.00</p>
+            <p>$25.00</p>
             <a href="product.html?id=15" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="16">
             <img src="products/Figures/Venom-funko.jpg" alt="Venom Funko Pop">
             <h3>Venom Funko Pop</h3>
-            <p>$45.00</p>
+            <p>$25.00</p>
             <a href="product.html?id=16" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="17">
             <img src="products/Figures/ww-funko.jpg" alt="WW Funko Pop">
             <h3>Wonder Woman Funko Pop</h3>
-            <p>$45.00</p>
+            <p>$25.00</p>
             <a href="product.html?id=17" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="18">
             <img src="products/Figures/boruto-funko.jpg" alt="Boruto Funko Pop">
             <h3>Boruto Funko Pop</h3>
-            <p>$45.00</p>
+            <p>$25.00</p>
             <a href="product.html?id=18" class="view-details">View Details</a>
         </div>
     </section>
