--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
                 </div>
             </li>
             <li><a href="#live-stream">Live Stream</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
         </ul>
     </nav>
 
