--- a/aboutus.html
+++ b/aboutus.html
@@ -15,20 +15,20 @@
             <a href="thisnthatmixupshop.html">
                 <img src="assets/logo.png" alt="Business Logo" class="logo">
             </a>
+            <div class="cart-summary">
+                <a href="cart.html">
+                    <img src="assets/shopping-cart.png" alt="Cart Icon" class="cart-icon">
+                    <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
+                </a>
+            </div>
         </div>
     </header>
 
     <nav>
         <ul>
-            <li class="dropdown">
-                <a href="#" class="dropbtn">Product Catalog</a>
-                <div class="dropdown-content">
-                    <a href="catalog_apparel.html">Apparel</a>
-                    <a href="catalog_accessories.html">Accessories</a>
-                    <a href="catalog_figures.html">Figures</a>
-                </div>
-            </li>
-            <li><a href="#live-stream">Live Stream</a></li>
+            <li><a href="catalog_apparel.html">Apparel</a></li>
+            <li><a href="catalog_accessories.html">Accessories</a></li>
+            <li><a href="catalog_figures.html">Figures</a></li>
             <li><a href="aboutus.html">About Us</a></li>
         </ul>
     </nav>
@@ -36,9 +36,6 @@
     <main>
         <section class="about-us">
             <h1>About Us</h1>
-            <p>Welcome to This N That Mix Up Shop! We are a passionate team dedicated to bringing you the best in exclusive merchandise, collectibles, and more. Our mission is to provide high-quality products that cater to fans of all kinds, from anime enthusiasts to pop culture aficionados.</p>
-            <p>Founded in 2025, This N That Mix Up Shop has quickly become a go-to destination for unique and hard-to-find items. We pride ourselves on our excellent customer service and our commitment to ensuring that every customer has a fantastic shopping experience.</p>
-            <p>Thank you for choosing This N That Mix Up Shop. We look forward to serving you and helping you find the perfect items to add to your collection!</p>
         </section>
 
         <section class="events">
@@ -53,9 +50,19 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>March 1, 2025</td>
-                        <td>Japan Day</td>
-                        <td>Corozal</td>
+                        <td> 1st March 2025 </td>
+                        <td> Japan Day </td>
+                        <td> Corozal Town </td>
+                    </tr>
+                    <tr>
+                        <td>    </td>
+                        <td>     </td>
+                        <td>     </td>
+                    </tr>
+                    <tr>
+                        <td>     </td>
+                        <td>     </td>
+                        <td>     </td>
                     </tr>
                 </tbody>
             </table>
@@ -65,6 +72,12 @@
     <footer>
         <p>&copy; 2025 L.M & Associates.</p>
     </footer>
+
+    <script src="js/fetch_product.js"></script>
+    <script src="js/product.js"></script>
+    <script src="js/global.js" defer></script>
+    <script src="js/cart.js" defer></script>
+    
 </body>
 
 </html>
