--- a/catalog_apparel.html
+++ b/catalog_apparel.html
@@ -15,20 +15,20 @@
             <a href="thisnthatmixupshop.html">
                 <img src="assets/logo.png" alt="Business Logo" class="logo">
             </a>
+            <div class="cart-summary">
+                <a href="cart.html">
+                    <img src="assets/shopping-cart.png" alt="Cart Icon" class="cart-icon">
+                    <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
+                </a>
+            </div>
         </div>
     </header>
 
     <nav>
         <ul>
-            <li class="dropdown">
-                <a href="#" class="dropbtn">Product Catalog</a>
-                <div class="dropdown-content">
-                    <a href="catalog_apparel.html">Apparel</a>
-                    <a href="catalog_accessories.html">Accessories</a>
-                    <a href="catalog_figures.html">Figures</a>
-                </div>
-            </li>
-            <li><a href="#live-stream">Live Stream</a></li>
+            <li><a href="catalog_apparel.html">Apparel</a></li>
+            <li><a href="catalog_accessories.html">Accessories</a></li>
+            <li><a href="catalog_figures.html">Figures</a></li>
             <li><a href="aboutus.html">About Us</a></li>
         </ul>
     </nav>
@@ -48,8 +48,8 @@
             <a href="product.html?id=2" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="3">
-            <img src="./products/apparel/goku-tee.jpg" alt="Goku Tee">
-            <h3>Goku Tee</h3>
+            <img src="./products/apparel/goku-tee.jpg" alt="Goku Silhouette Tee">
+            <h3>Goku Silhouette Tee</h3>
             <p>$35.00</p>
             <a href="product.html?id=3" class="view-details">View Details</a>
         </div>
@@ -60,8 +60,8 @@
             <a href="product.html?id=4" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="5">
-            <img src="./products/apparel/sakamoto-tee.jpg" alt="Sakamoto Tee">
-            <h3>Sakamoto Tee</h3>
+            <img src="./products/apparel/sakamoto-tee.jpg" alt="Sakamoto Days Tee">
+            <h3>Sakamoto Days Tee</h3>
             <p>$35.00</p>
             <a href="product.html?id=5" class="view-details">View Details</a>
         </div>
@@ -89,7 +89,10 @@
         <p>© 2025 Anime Store</p>
     </footer>
 
+    <script src="js/fetch_product.js"></script>
+    <script src="js/product.js"></script>
     <script src="js/global.js" defer></script>
+    <script src="js/cart.js" defer></script>
     
 </body>
 </html>
