--- a/catalog_figures.html
+++ b/catalog_figures.html
@@ -15,21 +15,21 @@
             <a href="thisnthatmixupshop.html">
                 <img src="assets/logo.png" alt="Business Logo" class="logo">
             </a>
+            <div class="cart-summary">
+                <a href="cart.html">
+                    <img src="assets/shopping-cart.png" alt="Cart Icon" class="cart-icon">
+                    <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
+                </a>
+            </div>
         </div>
     </header>
     
 
     <nav>
         <ul>
-            <li class="dropdown">
-                <a href="#" class="dropbtn">Product Catalog</a>
-                <div class="dropdown-content">
-                    <a href="catalog_apparel.html">Apparel</a>
-                    <a href="catalog_accessories.html">Accessories</a>
-                    <a href="catalog_figures.html">Figures</a>
-                </div>
-            </li>
-            <li><a href="#live-stream">Live Stream</a></li>
+            <li><a href="catalog_apparel.html">Apparel</a></li>
+            <li><a href="catalog_accessories.html">Accessories</a></li>
+            <li><a href="catalog_figures.html">Figures</a></li>
             <li><a href="aboutus.html">About Us</a></li>
         </ul>
     </nav>
@@ -102,7 +102,10 @@
         <p>© 2025 Anime Store</p>
     </footer>
 
+    <script src="js/fetch_product.js"></script>
+    <script src="js/product.js"></script>
     <script src="js/global.js" defer></script>
+    <script src="js/cart.js" defer></script>
     
 </body>
 </html>
