--- a/cart.html
+++ b/cart.html
@@ -7,6 +7,8 @@
     <title>Shopping Cart</title>
     <link rel="stylesheet" href="css/globalstyle.css">
     <link rel="stylesheet" href="css/cart.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -35,7 +37,6 @@
 
     <section id="cart-details" class="cart-container">
         <h2>Shopping Cart</h2>
-        <p>Total: $<span id="cart-total">0.00</span></p>
         <button id="checkout">Checkout</button>
         <div id="cart-items"></div>
         <div class="cart-summary">
@@ -47,9 +48,16 @@
     </footer>
 
     <script src="js/cart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             renderCartItems();
+
+            document.getElementById('checkout').addEventListener('click', function() {
+                window.location.href = 'checkout.html';
+            });
         });
 
         function renderCartItems() {
