--- a/catalog_figures.html
+++ b/catalog_figures.html
@@ -7,6 +7,8 @@
     <title>Figures</title>
     <link rel="stylesheet" href="css/globalstyle.css">
     <link rel="stylesheet" href="css/catalog.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -39,31 +41,31 @@
         <div class="product" data-id="9">
             <img src="products/Figures/luffy-funko.jpg" alt="Luffy Funko Pop">
             <h3>Luffy Funko Pop</h3>
-            <p>$25.00</p>
+            <p>$55.00</p> <!-- Updated price -->
             <a href="product.html?id=9" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="10">
             <img src="products/Figures/aipom-funko.jpg" alt="Aipom Funko Pop">
             <h3>Aipom Funko Pop</h3>
-            <p>$25.00</p>
+            <p>$55.00</p> <!-- Updated price -->
             <a href="product.html?id=10" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="11">
             <img src="products/Figures/gambit-funko.jpg" alt="Gambit Funko Pop">
             <h3>Gambit Funko Pop</h3>
-            <p>$25.00</p>
+            <p>$65.00</p> <!-- Updated price -->
             <a href="product.html?id=11" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="12">
             <img src="products/Figures/goku-funko.jpg" alt="Goku Funko Pop">
             <h3>Goku Funko Pop</h3>
-            <p>$25.00</p>
+            <p>$65.00</p> <!-- Updated price -->
             <a href="product.html?id=12" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="13">
             <img src="products/Figures/melodias-funko.jpg" alt="Meliodas Funko Pop">
             <h3>Meliodas Funko Pop</h3>
-            <p>$25.00</p>
+            <p>$65.00</p> <!-- Updated price -->
             <a href="product.html?id=13" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="14">
@@ -75,25 +77,25 @@
         <div class="product" data-id="15">
             <img src="products/Figures/tengen-funko.jpg" alt="Tengen Funko Pop">
             <h3>Tengen Uzui Funko Pop</h3>
-            <p>$25.00</p>
+            <p>$65.00</p> <!-- Updated price -->
             <a href="product.html?id=15" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="16">
             <img src="products/Figures/Venom-funko.jpg" alt="Venom Funko Pop">
             <h3>Venom Funko Pop</h3>
-            <p>$25.00</p>
+            <p>$55.00</p> <!-- Updated price -->
             <a href="product.html?id=16" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="17">
             <img src="products/Figures/ww-funko.jpg" alt="WW Funko Pop">
             <h3>Wonder Woman Funko Pop</h3>
-            <p>$25.00</p>
+            <p>$35.00</p> <!-- Updated price -->
             <a href="product.html?id=17" class="view-details">View Details</a>
         </div>
         <div class="product" data-id="18">
             <img src="products/Figures/boruto-funko.jpg" alt="Boruto Funko Pop">
             <h3>Boruto Funko Pop</h3>
-            <p>$25.00</p>
+            <p>$50.00</p> <!-- Updated price -->
             <a href="product.html?id=18" class="view-details">View Details</a>
         </div>
     </section>
@@ -106,6 +108,9 @@
     <script src="js/product.js"></script>
     <script src="js/global.js" defer></script>
     <script src="js/cart.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     
 </body>
 </html>
