--- a/product.html
+++ b/product.html
@@ -7,23 +7,8 @@
     <title>Product Details</title>
     <link rel="stylesheet" href="css/globalstyle.css">
     <link rel="stylesheet" href="css/product.css">
-    <style>
-        .popup {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-        }
-        .size-option.selected {
-            background-color: #4CAF50;
-            color: white;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -46,7 +31,6 @@
             <li><a href="catalog_apparel.html">Apparel</a></li>
             <li><a href="catalog_accessories.html">Accessories</a></li>
             <li><a href="catalog_figures.html">Figures</a></li>
-            <!-- <li><a href="#live-stream">Live Stream</a></li> -->
             <li><a href="aboutus.html">About Us</a></li>
         </ul>
     </nav>
@@ -89,6 +73,9 @@
     <script src="js/product.js"></script>
     <script src="js/global.js" defer></script>
     <script src="js/cart.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script>
         function showPopup(message) {
             const popup = document.createElement('div');
