--- a/thisnthatmixupshop.html
+++ b/thisnthatmixupshop.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/globalstyle.css">
     <link rel="stylesheet" href="css/catalog.css">
     <link rel="stylesheet" href="css/homepage.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -60,30 +62,42 @@
                     <p>$35.00</p>
                     <a href="product.html?id=3" class="view-details">View Details</a>
                 </div>
+                <div class="product" data-id="4">
+                    <img src="products/apparel/okarun-tee.jpg" alt="Okarun">
+                    <h3>Okarun Tee</h3>
+                    <p>$35.00</p>
+                    <a href="product.html?id=4" class="view-details">View Details</a>
+                </div>
             </div>
             <a href="catalog_apparel.html" class="see-more">See more</a>
         </section>
-        
+
         <section class="products" id="figures-section">
             <h2>Figures</h2>
             <div class="products">
                 <div class="product" data-id="9">
                     <img src="products/Figures/luffy-funko.jpg" alt="Luffy Funko Pop">
                     <h3>Luffy Funko Pop</h3>
-                    <p>$25.00</p>
+                    <p>$55.00</p>
                     <a href="product.html?id=9" class="view-details">View Details</a>
                 </div>
                 <div class="product" data-id="10">
                     <img src="products/Figures/aipom-funko.jpg" alt="Aipom Funko Pop">
                     <h3>Aipom Funko Pop</h3>
-                    <p>$25.00</p>
+                    <p>$55.00</p>
                     <a href="product.html?id=10" class="view-details">View Details</a>
                 </div>
                 <div class="product" data-id="11">
                     <img src="products/Figures/gambit-funko.jpg" alt="Gambit Funko Pop">
                     <h3>Gambit Funko Pop</h3>
-                    <p>$25.00</p>
+                    <p>$65.00</p>
                     <a href="product.html?id=11" class="view-details">View Details</a>
+                </div>
+                <div class="product" data-id="12">
+                    <img src="products/Figures/goku-funko.jpg" alt="Goku Funko Pop">
+                    <h3>Goku Funko Pop</h3>
+                    <p>$65.00</p>
+                    <a href="product.html?id=12" class="view-details">View Details</a>
                 </div>
             </div>
             <a href="catalog_figures.html" class="see-more">See more</a>
@@ -96,7 +110,7 @@
                     <h3>Coming Soon!</h3>
                 </div>
             </div>
-        </section> 
+        </section>
 
         <section id="live-stream" class="hero">
             <h2>Watch Our Live Streams!</h2>
@@ -122,6 +136,9 @@
     <script src="js/product.js"></script>
     <script src="js/global.js" defer></script>
     <script src="js/cart.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
