--- a/product.html
+++ b/product.html
@@ -1,129 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details</title>
-    <link rel="stylesheet" href="css/globalstyle.css">
-    <link rel="stylesheet" href="css/product.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/global.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .thumbnail {
+            cursor: pointer;
+            margin: 5px;
+            width: 100px; /* Adjust the width as needed */
+            height: 100px; /* Adjust the height as needed */
+        }
+        .thumbnail.active {
+            border: 2px solid #007bff;
+        }
+        .product-image {
+            max-width: 400px; /* Adjust the max-width as needed */
+            max-height: 400px; /* Adjust the max-height as needed */
+            display: block;
+            margin: 0 auto;
+        }
+        .product-title {
+            font-size: 2rem; /* Adjust the font size as needed */
+        }
+        .product-description {
+            font-size: 1.25rem; /* Adjust the font size as needed */
+        }
+        .product-price {
+            font-size: 1.5rem; /* Adjust the font size as needed */
+        }
+        .quantity-container {
+            display: flex;
+            align-items: center;
+        }
+        .quantity-container button {
+            width: 30px;
+            height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .quantity-container span {
+            width: 60px;
+            text-align: center;
+            display: inline-block;
+        }
+    </style>
 </head>
-
-<body>
-    <header>
-        <div class="header-container">
-            <a href="thisnthatmixupshop.html">
-                <img src="assets/logo.png" alt="Business Logo" class="logo">
+<body class="bg-gray-100">
+    <header class="text-white text-center py-4">
+        <div class="container d-flex justify-content-center align-items-center">
+            <a href="homepage.html">
+                <img src="assets/logo.png" alt="Business Logo" class="logo img-fluid mx-auto d-block small-logo">
             </a>
-            <div class="cart-summary">
-                <a href="cart.html">
-                    <img src="assets/shopping-cart.png" alt="Cart Icon" class="cart-icon">
-                    <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
-                </a>
-            </div>
         </div>
     </header>
-    
-    <nav>
-        <ul>
-            <li><a href="catalog_apparel.html">Apparel</a></li>
-            <li><a href="catalog_accessories.html">Accessories</a></li>
-            <li><a href="catalog_figures.html">Figures</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-        </ul>
+
+    <nav class="bg-primary text-white">
+        <div class="container">
+            <ul class="nav justify-content-center">
+                <li class="nav-item"><a class="nav-link text-white" href="homepage.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_apparel.html">Apparel</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_accessories.html">Accessories</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_figures.html">Figures</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="aboutus.html">About Us</a></li>
+                <li class="nav-item">
+                    <a href="cart.html" class="nav-link text-white">
+                        <i class="bi bi-cart"></i>
+                        <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
-    <section id="product-details">
-        <div class="image-gallery">
-            <img id="product-image" src="" alt="Product Image">
-            <div id="image-thumbnails"></div>
-        </div>
-        <div class="product-info">
-            <h2 id="product-title"></h2>
-            <p id="product-price"></p>
-            <p id="product-description"></p>
-            <div id="size-selection" style="display: none;">
-                <label>Size:</label>
-                <div id="size-options" style="display: flex; gap: 10px;">
-                    <button class="size-option" data-size="S">S</button>
-                    <button class="size-option" data-size="M">M</button>
-                    <button class="size-option" data-size="L">L</button>
-                    <button class="size-option" data-size="XL">XL</button>
-                    <button class="size-option" data-size="XXL">XXL</button>
-                    <button class="size-option" data-size="XXXL">XXXL</button>
+    <main class="container my-5">
+        <div id="product-details" class="row justify-content-center">
+            <div class="col-12 col-md-6 text-center">
+                <img id="product-image" class="img-fluid product-image" alt="Product Image">
+                <div id="image-thumbnails" class="d-flex flex-wrap justify-content-center mt-3"></div>
+            </div>
+            <div class="col-12 col-md-6">
+                <h1 id="product-title" class="product-title"></h1>
+                <p id="product-description" class="product-description"></p>
+                <p><strong>Price:</strong> <span id="product-price" class="product-price"></span></p>
+                <div id="product-sizes" class="mb-3" style="display: none;">
+                    <label><strong>Available Sizes:</strong></label>
+                    <div id="size-buttons" class="d-flex flex-wrap"></div>
                 </div>
+                <div class="mb-3">
+                    <label for="quantity"><strong>Quantity:</strong></label>
+                    <div class="quantity-container">
+                        <button id="decrease-quantity" class="btn btn-outline-secondary">-</button>
+                        <span id="quantity">1</span>
+                        <button id="increase-quantity" class="btn btn-outline-secondary">+</button>
+                    </div>
+                </div>
+                <button class="btn btn-primary">Add to Cart</button>
             </div>
-            <label for="quantity">Quantity:</label>
-            <div class="quantity-controls">
-                <button id="decrease-quantity">-</button>
-                <span id="quantity-display">1</span>
-                <button id="increase-quantity">+</button>
-            </div>
-            <button id="add-to-cart">Add to Cart</button>
         </div>
-    </section>
+    </main>
 
-    <footer>
-        <p>© 2025 Anime Store</p>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2025 My Online Store</p>
     </footer>
 
-    <script src="js/fetch_product.js"></script>
-    <script src="js/product.js"></script>
-    <script src="js/global.js" defer></script>
-    <script src="js/cart.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script>
-        function showPopup(message) {
-            const popup = document.createElement('div');
-            popup.className = 'popup';
-            popup.textContent = message;
-            document.body.appendChild(popup);
-            setTimeout(() => {
-                popup.remove();
-            }, 3000);
-        }
-
-        const quantityDisplay = document.getElementById('quantity-display');
-        let quantity = 1;
-
-        document.getElementById('decrease-quantity').addEventListener('click', function() {
-            if (quantity > 1) {
-                quantity--;
-                quantityDisplay.textContent = quantity;
-            }
-        });
-
-        document.getElementById('increase-quantity').addEventListener('click', function() {
-            quantity++;
-            quantityDisplay.textContent = quantity;
-        });
-
-        document.getElementById('add-to-cart').addEventListener('click', function() {
-            const selectedSizeElement = document.querySelector('.size-option.selected');
-            const size = selectedSizeElement ? selectedSizeElement.getAttribute('data-size') : null;
-            const product = {
-                id: parseInt(new URLSearchParams(window.location.search).get('id')),
-                name: document.getElementById('product-title').innerText,
-                price: parseFloat(document.getElementById('product-price').innerText.replace('$', '')),
-                quantity: quantity,
-                size: size,
-                image: document.getElementById('product-image').src
-            };
-            addToCart(product);
-            showPopup('Item added to cart!');
-        });
-
-        document.querySelectorAll('.size-option').forEach(option => {
-            option.addEventListener('click', function() {
-                document.querySelectorAll('.size-option').forEach(opt => opt.classList.remove('selected'));
-                this.classList.add('selected');
-            });
-        });
-    </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+    <script src="js/product.js"></script>
+    <script src="js/fetch_product.js"></script>
 </body>
 </html>
