--- a/aboutus.html
+++ b/aboutus.html
@@ -1,87 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - This N That Mix Up Shop</title>
-    <link rel="stylesheet" href="css/globalstyle.css">
-    <link rel="stylesheet" href="css/aboutus.css">
+    <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/global.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .calendar-table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        .calendar-table th, .calendar-table td {
+            border: 1px solid #ddd;
+            padding: 4px; /* Reduced padding */
+            text-align: center;
+            width: 14.28%; /* Ensure all cells are the same width */
+            height: 60px; /* Reduced height */
+        }
+        .calendar-table th {
+            background-color: #f2f2f2;
+        }
+        .event {
+            background-color: #fc5f02;
+            color: white;
+        }
+        .event-table tbody tr {
+            height: 40px; /* Reduced height */
+        }
+    </style>
 </head>
-
-<body>
-    <header>
-        <div class="header-container">
-            <a href="thisnthatmixupshop.html">
-                <img src="assets/logo.png" alt="Business Logo" class="logo">
+<body class="bg-gray-100">
+    <header class="text-white text-center py-4">
+        <div class="container d-flex justify-content-center align-items-center">
+            <a href="homepage.html">
+                <img src="assets/logo.png" alt="Business Logo" class="logo img-fluid mx-auto d-block small-logo">
             </a>
-            <div class="cart-summary">
-                <a href="cart.html">
-                    <img src="assets/shopping-cart.png" alt="Cart Icon" class="cart-icon">
-                    <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
-                </a>
-            </div>
         </div>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="catalog_apparel.html">Apparel</a></li>
-            <li><a href="catalog_accessories.html">Accessories</a></li>
-            <li><a href="catalog_figures.html">Figures</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-        </ul>
+    <nav class="bg-primary text-white">
+        <div class="container">
+            <ul class="nav justify-content-center">
+                <li class="nav-item"><a class="nav-link text-white" href="homepage.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_apparel.html">Apparel</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_accessories.html">Accessories</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_figures.html">Figures</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="aboutus.html">About Us</a></li>
+                <li class="nav-item">
+                    <a href="cart.html" class="nav-link text-white">
+                        <i class="bi bi-cart"></i>
+                        <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
-    <main>
-        <section class="about-us">
-            <h1>About Us</h1>
-        </section>
-
-        <section class="events">
-            <h2>Calendar of Events</h2>
-            <table class="events-calendar">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Event</th>
-                        <th>Location</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td> 1st March 2025 </td>
-                        <td> Japan Day </td>
-                        <td> Corozal Town </td>
-                    </tr>
-                    <tr>
-                        <td>    </td>
-                        <td>     </td>
-                        <td>     </td>
-                    </tr>
-                    <tr>
-                        <td>     </td>
-                        <td>     </td>
-                        <td>     </td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+    <main class="container my-5">
+        <div class="row justify-content-center mb-4">
+            <div class="col-12 col-md-8">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title text-center">About Us</h2>
+                        <!-- Add content here later -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title text-center">Calendar</h2>
+                        <table class="calendar-table event-table mb-4">
+                            <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Event</th>
+                                    <th>Location</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>March 1st</td>
+                                    <td>Japan Day</td>
+                                    <td>Corozal Town</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <!-- Add more events here -->
+                            </tbody>
+                        </table>
+                        <div id="calendar"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
-    <footer>
-        <p>&copy; 2025 L.M & Associates.</p>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2025 My Online Store</p>
     </footer>
 
-    <script src="js/fetch_product.js"></script>
-    <script src="js/product.js"></script>
-    <script src="js/global.js" defer></script>
-    <script src="js/cart.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const calendar = document.getElementById("calendar");
+            const daysInMonth = new Date(2025, 2, 0).getDate(); // March 2025
+            let calendarHTML = '<table class="calendar-table"><thead><tr>';
 
+            // Days of the week
+            const daysOfWeek = ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"];
+            daysOfWeek.forEach(day => {
+                calendarHTML += `<th>${day}</th>`;
+            });
+            calendarHTML += '</tr></thead><tbody><tr>';
+
+            // Fill in the days
+            let dayOfWeek = new Date(2025, 2, 1).getDay(); // March 1st, 2025
+            for (let i = 0; i < dayOfWeek; i++) {
+                calendarHTML += '<td></td>';
+            }
+            for (let day = 1; day <= daysInMonth; day++) {
+                if (dayOfWeek === 7) {
+                    dayOfWeek = 0;
+                    calendarHTML += '</tr><tr>';
+                }
+                if (day === 1) {
+                    calendarHTML += `<td class="event">${day}<br>Japan Day</td>`;
+                } else {
+                    calendarHTML += `<td>${day}</td>`;
+                }
+                dayOfWeek++;
+            }
+            while (dayOfWeek < 7) {
+                calendarHTML += '<td></td>';
+                dayOfWeek++;
+            }
+            calendarHTML += '</tr></tbody></table>';
+            calendar.innerHTML = calendarHTML;
+        });
+    </script>
+</body>
 </html>
