--- a/catalog_accessories.html
+++ b/catalog_accessories.html
@@ -3,70 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accessories</title>
-    <link rel="stylesheet" href="css/globalstyle.css">
-    <link rel="stylesheet" href="css/catalog.css">
+    <title>Accessories Catalog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        .center-box {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 30vh; /* Adjusted height */
-            border: 2px solid #000;
-            padding: 20px;
-            margin: 20px auto;
-            text-align: center;
-            max-width: 80%;
-        }
-        .products {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: calc(100vh - 200px); /* Adjust based on header/footer height */
-        }
-    </style>
+    <link rel="stylesheet" href="css/global.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <header>
-        <div class="header-container">
-            <a href="thisnthatmixupshop.html">
-                <img src="assets/logo.png" alt="Business Logo" class="logo">
+<body class="bg-gray-100">
+    <header class="text-white text-center py-4">
+        <div class="container d-flex justify-content-center align-items-center">
+            <a href="homepage.html">
+                <img src="assets/logo.png" alt="Business Logo" class="logo img-fluid mx-auto d-block small-logo">
             </a>
-            <div class="cart-summary">
-                <a href="cart.html">
-                    <img src="assets/shopping-cart.png" alt="Cart Icon" class="cart-icon">
-                    <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
-                </a>
-            </div>
         </div>
     </header>
-    
-    <nav>
-        <ul>
-            <li><a href="catalog_apparel.html">Apparel</a></li>
-            <li><a href="catalog_accessories.html">Accessories</a></li>
-            <li><a href="catalog_figures.html">Figures</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-        </ul>
+
+    <nav class="bg-primary text-white">
+        <div class="container">
+            <ul class="nav justify-content-center">
+                <li class="nav-item"><a class="nav-link text-white" href="homepage.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_apparel.html">Apparel</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_accessories.html">Accessories</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_figures.html">Figures</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="aboutus.html">About Us</a></li>
+                <li class="nav-item">
+                    <a href="cart.html" class="nav-link text-white">
+                        <i class="bi bi-cart"></i>
+                        <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
-    <section class="products">
-        <div class="center-box">
-            <p>Accessories will be available soon!</p>
+    <main class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h2 class="fs-1 mb-4">Accessories</h2>
+                        <p class="fs-2">Coming Soon!</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section>
-    <footer>
-        <p>&copy; 2025 Anime Store</p>
+    </main>
+
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2025 My Online Store</p>
     </footer>
 
-    <script src="js/fetch_product.js"></script>
-    <script src="js/product.js"></script>
-    <script src="js/global.js" defer></script>
-    <script src="js/cart.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
 </body>
 </html>
