--- a/catalog_apparel.html
+++ b/catalog_apparel.html
@@ -1,103 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apparel</title>
-    <link rel="stylesheet" href="css/globalstyle.css">
-    <link rel="stylesheet" href="css/catalog.css">
+    <title>Apparel Catalog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/global.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
-<body>
-    <header>
-        <div class="header-container">
-            <a href="thisnthatmixupshop.html">
-                <img src="assets/logo.png" alt="Business Logo" class="logo">
+<body class="bg-gray-100">
+    <header class="text-white text-center py-4">
+        <div class="container d-flex justify-content-center align-items-center">
+            <a href="homepage.html">
+                <img src="assets/logo.png" alt="Business Logo" class="logo img-fluid mx-auto d-block small-logo">
             </a>
-            <div class="cart-summary">
-                <a href="cart.html">
-                    <img src="assets/shopping-cart.png" alt="Cart Icon" class="cart-icon">
-                    <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
-                </a>
-            </div>
         </div>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="catalog_apparel.html">Apparel</a></li>
-            <li><a href="catalog_accessories.html">Accessories</a></li>
-            <li><a href="catalog_figures.html">Figures</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-        </ul>
+    <nav class="bg-primary text-white">
+        <div class="container">
+            <ul class="nav justify-content-center">
+                <li class="nav-item"><a class="nav-link text-white" href="homepage.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_apparel.html">Apparel</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_accessories.html">Accessories</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="catalog_figures.html">Figures</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="aboutus.html">About Us</a></li>
+                <li class="nav-item">
+                    <a href="cart.html" class="nav-link text-white">
+                        <i class="bi bi-cart"></i>
+                        <span id="cart-count">0</span> items - $<span id="cart-total">0.00</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
-    <section class="products">
-        <!-- Apparel Products -->
-        <div class="product" data-id="1">
-            <img src="./products/apparel/luffy-tee.jpg" alt="Luffy Tee">
-            <h3>Luffy Tee</h3>
-            <p>$35.00</p>
-            <a href="product.html?id=1" class="view-details">View Details</a>
+    <main class="container my-5">
+        <div class="row justify-content-center">
+            <h2 class="text-center mb-4">Apparel</h2>
+            <!-- Apparel Products -->
+            <div id="apparel-products" class="row justify-content-center"></div>
         </div>
-        <div class="product" data-id="2">
-            <img src="./products/apparel/aot-tee.jpg" alt="AOT Tee">
-            <h3>Attack on Titan Tee</h3>
-            <p>$35.00</p>
-            <a href="product.html?id=2" class="view-details">View Details</a>
-        </div>
-        <div class="product" data-id="3">
-            <img src="./products/apparel/goku-tee.jpg" alt="Goku Silhouette Tee">
-            <h3>Goku Silhouette Tee</h3>
-            <p>$35.00</p>
-            <a href="product.html?id=3" class="view-details">View Details</a>
-        </div>
-        <div class="product" data-id="4">
-            <img src="./products/apparel/okarun-tee.jpg" alt="Okarun Tee">
-            <h3>Okarun Tee</h3>
-            <p>$35.00</p>
-            <a href="product.html?id=4" class="view-details">View Details</a>
-        </div>
-        <div class="product" data-id="5">
-            <img src="./products/apparel/sakamoto-tee.jpg" alt="Sakamoto Days Tee">
-            <h3>Sakamoto Days Tee</h3>
-            <p>$35.00</p>
-            <a href="product.html?id=5" class="view-details">View Details</a>
-        </div>
-        <div class="product" data-id="6">
-            <img src="./products/apparel/tg-tee.jpg" alt="Turbo Granny Tee">
-            <h3>Turbo Granny Tee</h3>
-            <p>$35.00</p>
-            <a href="product.html?id=6" class="view-details">View Details</a>
-        </div>
-        <div class="product" data-id="7">
-            <img src="./products/apparel/saitama-tee.jpg" alt="Saitama Tee">
-            <h3>Saitama Tee</h3>
-            <p>$35.00</p>
-            <a href="product.html?id=7" class="view-details">View Details</a>
-        </div>
-        <div class="product" data-id="8">
-            <img src="./products/apparel/neko-luffy-tee.jpg" alt="Neko Luffy Tee">
-            <h3>Neko Luffy Tee</h3>
-            <p>$35.00</p>
-            <a href="product.html?id=8" class="view-details">View Details</a>
-        </div>
-    </section>
+    </main>
 
-    <footer>
-        <p>© 2025 Anime Store</p>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2025 My Online Store</p>
     </footer>
 
-    <script src="js/fetch_product.js"></script>
-    <script src="js/product.js"></script>
-    <script src="js/global.js" defer></script>
-    <script src="js/cart.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+    <script src="js/product.js"></script>
+    <script src="js/fetch_apparel.js"></script>
 </body>
 </html>
