--- a/thisnthatmixupshop.html
+++ b/thisnthatmixupshop.html
@@ -61,11 +61,6 @@
             transform: scale(1.1);
             transition: transform 0.4s ease-in-out;
         }
-
-        .product-card:hover {
-            transform: scale(1.1);
-            transition: transform 0.4s ease-in-out;
-        }
     </style>
 </head>
 
@@ -122,7 +117,7 @@
                 <div class="card catalog-card">
                     <a href="catalog_accessories.html" class="section-link">
                         <div class="square-image">
-                            <img src="assets/placeholder.jpg" alt="Accessories">
+                            <img src="products/Keychains/accessory-img.jpg" alt="Accessories">
                         </div>
                         <div class="label">Accessories</div>
                     </a>
@@ -235,7 +230,42 @@
                 <div class="card-body">
                     <h2 class="text-center mb-4 display-4">Accessories</h2>
                     <div class="row justify-content-center">
-                        <p class="text-center fs-4">Coming Soon!</p>
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                            <div class="card h-100 product-card text-center">
+                                <a href="product.html?id=56">
+                                    <img src="products/Keychains/luffy-jolly-roger-keychain.jpg" class="card-img-top img-fluid"
+                                        alt="Boruto Funko">
+                                </a>
+                                <div class="card-body">
+                                    <h5 class="card-title fs-4">Luffy's Jolly Roger Keychain</h5>
+                                    <p class="card-text fs-5">$18.00</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                            <div class="card h-100 product-card text-center">
+                                <a href="product.html?id=76">
+                                    <img src="products/Mugs/mashle-mug.jpg" class="card-img-top img-fluid"
+                                        alt="Gambit Funko">
+                                </a>
+                                <div class="card-body">
+                                    <h5 class="card-title fs-4">Mashle Magic & Muscles Mug</h5>
+                                    <p class="card-text fs-5">$18.00</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                            <div class="card h-100 product-card text-center">
+                                <a href="product.html?id=91">
+                                    <img src="products/Necklaces/king-kai-necklace.jpg" class="card-img-top img-fluid"
+                                        alt="Aipom Funko">
+                                </a>
+                                <div class="card-body">
+                                    <h5 class="card-title fs-4">King Kai Kanji Necklace</h5>
+                                    <p class="card-text fs-5">$20.00</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
