--- a/catalog_accessories.html
+++ b/catalog_accessories.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accessories Catalog</title>
+    <title>Apparel Catalog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/global.css">
     <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
+
 <body class="bg-gray-100">
     <header class="text-white text-center py-4">
         <div class="container d-flex justify-content-center align-items-center">
@@ -46,14 +49,27 @@
     </nav>
 
     <main class="container my-5">
-        <div class="row justify-content-center">
-            <div class="col-12 col-md-8">
-                <div class="card w-75 mx-auto text-center">
-                    <div class="card-body">
-                        <h2 class="fs-1 mb-4">Accessories</h2>
-                        <p class="fs-2">Coming Soon!</p>
-                    </div>
-                </div>
+        <div class="card w-75 mx-auto">
+            <div class="row justify-content-center">
+                <h2 class="text-center mb-4 display-4">Keychains</h2>
+                <!-- Keychain Products -->
+                <div id="keychains-products" class="row justify-content-center"></div>
+            </div>
+        </div>
+        <br> <br>
+        <div class="card w-75 mx-auto">
+            <div class="row justify-content-center">
+                <h2 class="text-center mb-4 display-4">Mugs</h2>
+                <!-- Mug Products -->
+                <div id="mugs-products" class="row justify-content-center"></div>
+            </div>
+        </div>
+        <br> <br>
+        <div class="card w-75 mx-auto">
+            <div class="row justify-content-center">
+                <h2 class="text-center mb-4 display-4">Necklaces</h2>
+                <!-- Necklace Products -->
+                <div id="necklaces-products" class="row justify-content-center"></div>
             </div>
         </div>
     </main>
@@ -66,6 +82,9 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+    <script src="js/product.js"></script>
+    <script src="js/fetch_accessories.js"></script>
     <script src="js/cart.js"></script>
 </body>
+
 </html>
