--- a/testing.html
+++ b/testing.html
@@ -73,42 +73,56 @@
     <header class="text-white text-center py-3">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <img src="assets/logo.png" alt="Logo" class="navbar-brand logo">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="thisnthatmixupshop.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="catalog_apparel.html">Apparel</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="catalog_accessories.html">Accessories</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="catalog_figures.html">Figures</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="aboutus.html">About Us</a>
-                  </li>
-                  <li class="nav-item">
-                    <i class="bi bi-cart2 fs-3"></i>
-                    <span id="cart-count">0</span>
-                  </li>
-                </ul>
-              </div>
+                <a class="navbar-brand" href="thisnthatmixupshop.html">
+                    <img src="assets/logo.png" alt="Logo" class="navbar-brand logo">
+                    <!-- <img src="assets/sprites.png" alt="Logo" class="logo2"> -->
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="thisnthatmixupshop.html">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Shop
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="catalog_apparel.html">Apparel</a></li>
+                                <li><a class="dropdown-item" href="catalog_accessories.html">Accessories</a></li>
+                                <li><a class="dropdown-item" href="catalog_figures.html">Figures</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="aboutus.html">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <i class="bi bi-cart2 fs-4"></i>
+                            <span id="cart-count">0</span>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </nav>
+
+            <div class="container-fluid">
+                <form class="d-flex" role="search" action="" method="post">
+                    <input class="form-control me-2" type="search" placeholder="What are you looking for?"
+                        aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
     </header>
 
-    
+
 
     <main class="container my-5">
         <!-- Section Links -->
-         <h2 class="text-center mb-4 display-4">Shop</h2>
+        <h2 class="text-center mb-4 display-4">Shop</h2>
         <div class="row mb-4">
             <div class="col-md-2 mb-4 offset-md-3">
                 <div class="card catalog-card">
@@ -130,117 +144,116 @@
                     </a>
                 </div>
             </div>
-                <div class=" col-md-2 mb-4 mx-2">
-                    <div class="card catalog-card">
-                        <a href="catalog_figures.html" class="section-link">
-                            <div class="square-image">
-                                <img src="products/Figures/tengen-funko.jpg" alt="Figures">
-                            </div>
-                            <div class="label">Figures</div>
-                        </a>
-                    </div>
+            <div class=" col-md-2 mb-4 mx-2">
+                <div class="card catalog-card">
+                    <a href="catalog_figures.html" class="section-link">
+                        <div class="square-image">
+                            <img src="products/Figures/tengen-funko.jpg" alt="Figures">
+                        </div>
+                        <div class="label">Figures</div>
+                    </a>
                 </div>
             </div>
+        </div>
 
-            <!-- Apparel Section -->
-            <div class="card mb-5 w-75 mx-auto">
-                <div class="card-body">
-                    <h2 class="text-center mb-4 display-4">Apparel</h2>
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                            <div class="card h-100 product-card text-center">
-                                <a href="product.html?id=3">
-                                    <img src="products/Apparel/goku-tee.jpg" class="card-img-top img-fluid"
-                                        alt="Goku Tee">
-                                </a>
-                                <div class="card-body">
-                                    <h5 class="card-title fs-4">Goku Tee</h5>
-                                    <p class="card-text fs-5">$35.00</p>
-                                </div>
+        <!-- Apparel Section -->
+        <div class="card mb-5 w-75 mx-auto">
+            <div class="card-body">
+                <h2 class="text-center mb-4 display-4">Apparel</h2>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                        <div class="card h-100 product-card text-center">
+                            <a href="product.html?id=3">
+                                <img src="products/Apparel/goku-tee.jpg" class="card-img-top img-fluid" alt="Goku Tee">
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title fs-4">Goku Tee</h5>
+                                <p class="card-text fs-5">$35.00</p>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                            <div class="card h-100 product-card text-center">
-                                <a href="product.html?id=1">
-                                    <img src="products/Apparel/luffy-tee.jpg" class="card-img-top img-fluid"
-                                        alt="Luffy Tee">
-                                </a>
-                                <div class="card-body">
-                                    <h5 class="card-title fs-4">Luffy Tee</h5>
-                                    <p class="card-text fs-5">$35.00</p>
-                                </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                        <div class="card h-100 product-card text-center">
+                            <a href="product.html?id=1">
+                                <img src="products/Apparel/luffy-tee.jpg" class="card-img-top img-fluid"
+                                    alt="Luffy Tee">
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title fs-4">Luffy Tee</h5>
+                                <p class="card-text fs-5">$35.00</p>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                            <div class="card h-100 product-card text-center">
-                                <a href="product.html?id=7">
-                                    <img src="products/Apparel/saitama-tee.jpg" class="card-img-top img-fluid"
-                                        alt="Saitama Tee">
-                                </a>
-                                <div class="card-body">
-                                    <h5 class="card-title fs-4">Saitama Tee</h5>
-                                    <p class="card-text fs-5">$35.00</p>
-                                </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                        <div class="card h-100 product-card text-center">
+                            <a href="product.html?id=7">
+                                <img src="products/Apparel/saitama-tee.jpg" class="card-img-top img-fluid"
+                                    alt="Saitama Tee">
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title fs-4">Saitama Tee</h5>
+                                <p class="card-text fs-5">$35.00</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- Figures Section -->
-            <div class="card mb-5 w-75 mx-auto">
-                <div class="card-body">
-                    <h2 class="text-center mb-4 display-4">Figures</h2>
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                            <div class="card h-100 product-card text-center">
-                                <a href="product.html?id=18">
-                                    <img src="products/Figures/boruto-funko.jpg" class="card-img-top img-fluid"
-                                        alt="Boruto Funko">
-                                </a>
-                                <div class="card-body">
-                                    <h5 class="card-title fs-4">Boruto Funko</h5>
-                                    <p class="card-text fs-5">$50.00</p>
-                                </div>
+        <!-- Figures Section -->
+        <div class="card mb-5 w-75 mx-auto">
+            <div class="card-body">
+                <h2 class="text-center mb-4 display-4">Figures</h2>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                        <div class="card h-100 product-card text-center">
+                            <a href="product.html?id=18">
+                                <img src="products/Figures/boruto-funko.jpg" class="card-img-top img-fluid"
+                                    alt="Boruto Funko">
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title fs-4">Boruto Funko</h5>
+                                <p class="card-text fs-5">$50.00</p>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                            <div class="card h-100 product-card text-center">
-                                <a href="product.html?id=11">
-                                    <img src="products/Figures/gambit-funko.jpg" class="card-img-top img-fluid"
-                                        alt="Gambit Funko">
-                                </a>
-                                <div class="card-body">
-                                    <h5 class="card-title fs-4">Gambit Funko</h5>
-                                    <p class="card-text fs-5">$65.00</p>
-                                </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                        <div class="card h-100 product-card text-center">
+                            <a href="product.html?id=11">
+                                <img src="products/Figures/gambit-funko.jpg" class="card-img-top img-fluid"
+                                    alt="Gambit Funko">
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title fs-4">Gambit Funko</h5>
+                                <p class="card-text fs-5">$65.00</p>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                            <div class="card h-100 product-card text-center">
-                                <a href="product.html?id=10">
-                                    <img src="products/Figures/aipom-funko.jpg" class="card-img-top img-fluid"
-                                        alt="Aipom Funko">
-                                </a>
-                                <div class="card-body">
-                                    <h5 class="card-title fs-4">Aipom Funko</h5>
-                                    <p class="card-text fs-5">$55.00</p>
-                                </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                        <div class="card h-100 product-card text-center">
+                            <a href="product.html?id=10">
+                                <img src="products/Figures/aipom-funko.jpg" class="card-img-top img-fluid"
+                                    alt="Aipom Funko">
+                            </a>
+                            <div class="card-body">
+                                <h5 class="card-title fs-4">Aipom Funko</h5>
+                                <p class="card-text fs-5">$55.00</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- Accessories Section -->
-            <div class="card mb-5 w-75 mx-auto">
-                <div class="card-body">
-                    <h2 class="text-center mb-4 display-4">Accessories</h2>
-                    <div class="row justify-content-center">
-                        <p class="text-center fs-4">Coming Soon!</p>
-                    </div>
+        <!-- Accessories Section -->
+        <div class="card mb-5 w-75 mx-auto">
+            <div class="card-body">
+                <h2 class="text-center mb-4 display-4">Accessories</h2>
+                <div class="row justify-content-center">
+                    <p class="text-center fs-4">Coming Soon!</p>
                 </div>
             </div>
+        </div>
     </main>
 
     <footer class="bg-dark text-white text-center py-3">
