Tidied up product names
Cleaned up product names and product cards in product page, also testing look for mobile devices

--- a/product.html
+++ b/product.html
@@ -114,7 +114,7 @@
                         <button id="increase-quantity" class="btn btn-outline-secondary">+</button>
                     </div>
 
-                    <button class="btn btn-primary">Add to Cart</button>
+                    <button class="btn btn-primary cart add-to-cart">Add to Cart</button>
                     <div id="product-sizes" class="mb-3" style="display: none;">
                         <label><strong>Available Sizes:</strong></label>
                         <div id="size-buttons" class="d-flex flex-wrap"></div>
