--- a/thisnthatmixupshop.html
+++ b/thisnthatmixupshop.html
@@ -192,7 +192,7 @@
                                         alt="Boruto Funko">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title fs-4">Boruto Funko</h5>
+                                    <h5 class="card-title fs-4">Boruto Uzumaki Funko</h5>
                                     <p class="card-text fs-5">$50.00</p>
                                 </div>
                             </div>
@@ -234,11 +234,11 @@
                             <div class="card h-100 product-card text-center">
                                 <a href="product.html?id=56">
                                     <img src="products/Keychains/luffy-jolly-roger-keychain.jpg" class="card-img-top img-fluid"
-                                        alt="Boruto Funko">
+                                        alt="Luffy Keychain">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title fs-4">Luffy's Jolly Roger Keychain</h5>
-                                    <p class="card-text fs-5">$18.00</p>
+                                    <p class="card-text fs-5">$20.00</p>
                                 </div>
                             </div>
                         </div>
@@ -246,7 +246,7 @@
                             <div class="card h-100 product-card text-center">
                                 <a href="product.html?id=76">
                                     <img src="products/Mugs/mashle-mug.jpg" class="card-img-top img-fluid"
-                                        alt="Gambit Funko">
+                                        alt="Mashle Mug">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title fs-4">Mashle Magic & Muscles Mug</h5>
@@ -258,7 +258,7 @@
                             <div class="card h-100 product-card text-center">
                                 <a href="product.html?id=91">
                                     <img src="products/Necklaces/king-kai-necklace.jpg" class="card-img-top img-fluid"
-                                        alt="Aipom Funko">
+                                        alt="King Kai Necklace">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title fs-4">King Kai Kanji Necklace</h5>
