--- a/product.html
+++ b/product.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/global.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -17,35 +15,28 @@
             width: 100px;
             height: 100px;
         }
-
         .thumbnail.active {
             border: 2px solid #007bff;
         }
-
         .product-image {
             max-width: 300px;
             max-height: 300px;
             display: block;
             margin: 0 auto;
         }
-
         .product-title {
             font-size: 2rem;
         }
-
         .product-description {
             font-size: 1.25rem;
         }
-
         .product-price {
             font-size: 1.5rem;
         }
-
         .quantity-container {
             display: flex;
             align-items: center;
         }
-
         .quantity-container button {
             width: 30px;
             height: 30px;
@@ -53,15 +44,25 @@
             justify-content: center;
             align-items: center;
         }
-
         .quantity-container span {
             width: 60px;
             text-align: center;
             display: inline-block;
         }
+        .popup {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: #28a745;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: none;
+            z-index: 1000;
+        }
     </style>
 </head>
-
 <body class="bg-gray-100">
     <header class="text-white text-center py-4">
         <div class="container d-flex justify-content-center align-items-center">
@@ -70,14 +71,12 @@
             </a>
         </div>
     </header>
-
     <nav class="bg-primary text-white sticky-top">
         <div class="container">
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a class="nav-link text-white" href="thisnthatmixupshop.html">Home</a></li>
                 <div class="dropdown">
-                    <a class="nav-link text-white dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                        data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link text-white dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                         Shop
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -96,7 +95,6 @@
             </ul>
         </div>
     </nav>
-
     <main class="container my-5">
         <div id="product-details" class="row justify-content-center">
             <div class="col-12 col-md-4 text-center">
@@ -113,29 +111,24 @@
                         <span id="quantity">1</span>
                         <button id="increase-quantity" class="btn btn-outline-secondary">+</button>
                     </div>
-
-                    <button class="btn btn-primary cart add-to-cart">Add to Cart</button>
                     <div id="product-sizes" class="mb-3" style="display: none;">
                         <label><strong>Available Sizes:</strong></label>
                         <div id="size-buttons" class="d-flex flex-wrap"></div>
                     </div>
+                    <button class="btn btn-primary add-to-cart">Add to Cart</button>
                     <p id="product-description" class="product-description"></p>
                 </div>
             </div>
         </div>
     </main>
-
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2025 My Online Store</p>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <div id="popup" class="popup">Item added to cart successfully!</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
     <script src="js/product.js"></script>
     <script src="js/fetch_product.js"></script>
     <script src="js/cart.js"></script>
 </body>
-
 </html>
