--- a/testing.html
+++ b/testing.html
@@ -10,63 +10,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/global.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        .section-link {
-            position: relative;
-            display: inline-block;
-            text-align: center;
-            color: white;
-        }
-
-        .section-link img {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-        }
-
-        .section-link .label {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px 20px;
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-
-        .square-image {
-            width: 100%;
-            padding-top: 100%;
-            position: relative;
-        }
-
-        .square-image img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .catalog-card {
-            max-width: 300px;
-            margin: 0 auto;
-            transition: background-color 0.3s ease;
-        }
-
-        .catalog-card:hover {
-            background-color: grey;
-            transform: scale(1.1);
-            transition: transform 0.4s ease-in-out;
-        }
-
-        .product-card:hover {
-            transform: scale(1.1);
-            transition: transform 0.4s ease-in-out;
-        }
-    </style>
 </head>
 
 <body class="bg-gray-100">
@@ -77,10 +20,7 @@
                     <img src="assets/logo.png" alt="Logo" class="navbar-brand logo">
                     <!-- <img src="assets/sprites.png" alt="Logo" class="logo2"> -->
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+
                 <div class="navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -109,10 +49,10 @@
             </div>
 
             <div class="container-fluid">
-                <form class="d-flex" role="search" action="" method="post">
-                    <input class="form-control me-2" type="search" placeholder="What are you looking for?"
-                        aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                <form id="search-form" class="d-flex" role="search">
+                    <input id="search-input" class="form-control me-2" type="search"
+                        placeholder="What are you looking for?" aria-label="Search">
+                    <button class="btn btn-success" type="submit">Search</button>
                 </form>
             </div>
         </nav>
@@ -266,6 +206,16 @@
     <script src="js/product.js"></script>
     <script src="js/fetch_apparel.js"></script>
     <script src="js/cart.js"></script>
+    <script src="js/collection.js"></script>
+    <script>
+        document.getElementById('search-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const searchTerm = document.getElementById('search-input').value.trim().toLowerCase();
+            const filteredProducts = products.filter(product => product.name.toLowerCase().includes(searchTerm));
+            localStorage.setItem('filteredProducts', JSON.stringify(filteredProducts));
+            window.location.href = 'collection.html';
+        });
+    </script>
 </body>
 
 </html>
